--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=  , initial-scale=1.0" />
     <title>React Praticee</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css"/>
   </head>
   <body>
-    <div id="root">Not Render</div>
+    <div id="root"></div>
+    <!-- <script>
+      const heading=document.createElement("h1");
+      heading.innerHTML="hellow world!";
+      const root=document.getElementById("root");
+      root.appendChild(heading);
+    </script> -->
       
      <!-- <div id="root">
       <div id="container">
@@ -28,8 +34,11 @@
     </script> -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="App.js">
-       
-    </script>
+    <!-- <script>
+      const heading=React.createElement("h1",{},"hi everyone");
+      const root=ReactDOM.createRoot(document.getElementById("root"));
+      root.render(heading);
+    </script> -->
+    <script src="App.js"></script>
   </body>
 </html>
