--- a/index.html
+++ b/index.html
@@ -4,23 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=  , initial-scale=1.0" />
     <title>React Praticee</title>
-    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <h1>hello</h1>
+    <div id="root">
+      <!-- <h1>hi hellow</h1>  code replaced by app.js -->
+    </div>
+    <h1>hellow</h1>
     <!-- <script>
       const heading=document.createElement("h1");
       heading.innerHTML="hellow world!";
       const root=document.getElementById("root");
       root.appendChild(heading);
     </script> -->
-      
-     <!-- <div id="root">
+
+    <!-- <div id="root">
       <div id="container">
         <h1>heading 1</h1>
         <h2>heading 2</h2>
       </div> -->
-    
+
     <!-- <div id="header"><h1>header</h1></div>
     <div id="root">
       <h1>hi welcome to React</h1>
@@ -32,8 +36,14 @@
         document.getElementById("root")
         root.appendChild(heading)
     </script> -->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+    ></script>
     <!-- <script>
       const heading=React.createElement("h1",{},"hi everyone");
       const root=ReactDOM.createRoot(document.getElementById("root"));
