--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
         document.getElementById("root")
         root.appendChild(heading)
     </script> -->
-    <script
+    <!-- <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
     ></script>
     <script
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
+    ></script> -->
     <!-- <script>
       const heading=React.createElement("h1",{},"hi everyone");
       const root=ReactDOM.createRoot(document.getElementById("root"));
       root.render(heading);
     </script> -->
-    <script src="App.js"></script>
+    <!-- <script src="App.js"></script> -->
   </body>
 </html>
