--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=  , initial-scale=1.0" />
+    <meta name="viewport" , initial-scale=1.0" />
     <title>React Praticee</title>
     <link rel="stylesheet" href="index.css" />
   </head>
