--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" , initial-scale=1.0" />
+    <meta name="viewport" content="width=  , initial-scale=1.0" />
     <title>React Praticee</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>hello</h1>
+    <!-- <h1>hello</h1> -->
     <div id="root">
       <!-- <h1>hi hellow</h1>  code replaced by app.js -->
     </div>
-    <h1>hellow</h1>
+    <!-- <h1>hellow</h1> -->
     <!-- <script>
       const heading=document.createElement("h1");
       heading.innerHTML="hellow world!";
@@ -49,6 +49,7 @@
       const root=ReactDOM.createRoot(document.getElementById("root"));
       root.render(heading);
     </script> -->
-    <!-- <script src="App.js"></script> -->
+    <script type="module" src="App.js"></script>
+    
   </body>
 </html>
