--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- <h1>hello</h1> -->
     <div id="root">
-      <h1>hi hellow</h1> 
+      <h1>Not Rendering...</h1> 
     </div>
     <!-- <h1>hellow</h1> -->
     <!-- <script>
