restrcuting react folders

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       const root=ReactDOM.createRoot(document.getElementById("root"));
       root.render(heading);
     </script> -->
-    <script type="module" src="App.js"></script>
+    <script type="module" src="./src/App.js"></script>
     
   </body>
 </html>
